# remembrance-agent

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  acconfig.h  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  mkinstalldirs  savant.h
main/: Makefile  Makefile.am  Makefile.in  imain.c  ra-index  ra-retrieve  rmain.c  rmain.h
main/.deps/: imain.Po  rmain.Po
other/: Makefile  Makefile.am  Makefile.in  jimminy.el  ra-index.1  ra-retrieve.1  remem.el  remem.elc
plugins/: Makefile  Makefile.am  Makefile.in  indexers-date.c  indexers-text.c  parsers-date.c  parsers-text.c  plugins-date.h  plugins-text.h  plugins.h  retrievers-text.c  stem.c  stops.h
plugins/.deps/: indexers-date.Po  indexers-text.Po  parsers-date.Po  parsers-text.Po  retrievers-text.Po  stem.Po
savutil/: Makefile  Makefile.am  Makefile.in  big.c  gbuf.c  gbuf.h  hash.c  hash.h  opendie.c  saverror.c  savutil.h
savutil/.deps/: big.Po  gbuf.Po  hash.Po  opendie.Po  saverror.Po
savutil/parsedate/: Makefile  Makefile.am  Makefile.dist  Makefile.in  README  date.3  datelex.c  dateyacc.c  dateyacc.h  dateyacc.y  parsedate.c  parsedate.h
savutil/parsedate/.deps/: datelex.Po  dateyacc.Po  parsedate.Po
template/: Makefile  Makefile.am  Makefile.in  conftemplates.c  conftemplates.h  parsedoc.c  parsedoc.h  regex.c  regex.h
template/.deps/: conftemplates.Po  parsedoc.Po  regex.Po
