dnl Process this file with autoconf to produce a configure script.
AC_INIT(savutil/savutil.h)
AM_INIT_AUTOMAKE(remem, 2.12)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
dnl We only need CXX if we're using C++, but only iostream/iostream2 in
dnl zlib/contrib need that.  Since C++ is often misconfigured and/or since
dnl those programs' use of it may be broken (Linux gets fatal compiler warnings
dnl using "egcs-2.90.27 980315 (egcs-1.0.2 release)", though HPUX compiles it
dnl just fine using g++ 2.7.2.2), we'll just punt the whole issue and not compile
dnl those programs.  Hence, we don't need to check on C++ here, either.
dnl AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_YACC
AM_PATH_LISPDIR

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(pcre/pcre.h sys/time.h sys/stat.h unistd.h pwd.h sys/types.h alloca.h errno.h limits.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_CHECK_TYPE(ssize_t, int)
AM_PROG_LEX
AC_HEADER_TIME
AC_STRUCT_TM

dnl Get byte-order and the sizes of these types
AC_C_BIGENDIAN
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(float)
AC_CHECK_SIZEOF(double)

dnl Checks for library functions.
AC_FUNC_MMAP
AC_CHECK_FUNCS(bcopy bzero getcwd gettimeofday isascii strdup regcomp strerror strtol memmove)

dnl   Note that I added /usr/include/pcre because some installations keep
dnl   pcre header files there, while others keep them in /usr/include. This
dnl   makes sure I find it in either place.

dnl I've also added /sw/include/ so Mac OS-X users who use Fink will
dnl be able to find the PCRE libraries.

INCLUDES="$INCLUDES -I\$(top_srcdir) -I\$(top_srcdir)/savutil"
INCLUDES="$INCLUDES -I\$(top_srcdir)/savutil/parsedate"
#  INCLUDES="$INCLUDES -I\$(top_srcdir)/savutil/pcre"
#  INCLUDES="$INCLUDES -I\$(top_srcdir)/savutil/zlib"
INCLUDES="$INCLUDES -I\$(top_srcdir)/template"
INCLUDES="$INCLUDES -I\$(top_srcdir)/plugins"
INCLUDES="$INCLUDES -I\/usr/include/pcre"
INCLUDES="$INCLUDES -I\/sw/include"
AC_SUBST(INCLUDES)

# iostream and iostream2 commented-out from AC_OUTPUT below because
# they force one to have a working C++ compiler, but aren't used in
# the final binary.  --- Foner 30 Jun 98.
# savutil/zlib/contrib/iostream/Makefile
# savutil/zlib/contrib/iostream2/Makefile

AC_OUTPUT([Makefile savutil/Makefile \
savutil/parsedate/Makefile \
template/Makefile \
plugins/Makefile main/Makefile other/Makefile])
# savutil/pcre/Makefile \
# savutil/zlib/Makefile savutil/zlib/amiga/Makefile \
# savutil/zlib/contrib/Makefile savutil/zlib/contrib/asm386/Makefile \
# savutil/zlib/contrib/minizip/Makefile savutil/zlib/contrib/untgz/Makefile \
# savutil/zlib/msdos/Makefile savutil/zlib/nt/Makefile \
